# vllm-exploratory

./: .gitignore  README.md  pyproject.toml
data/processed_docs/: 20220405 - Glennmont Partners 2-way NDA.json  ConstructionSampleClause2_image_only.json  Copy of MMG.DD NDA_Fails_OCR.json  DATA_README.json  LinkedIn_MNG_4.19.2024_Adv, Mktg, Digial_Contract Cover Sheet_encryption_layer.json  california-commercial-lease-agreement_full_text.json  image_page.json  mixed_page.json
llm/xplore/: LINT_273_explore_RAG.ipynb  LINT_723_explore_RAG.ipynb  __init__.py  __main__.py  batch.py  helpers.py  test.ipynb
llm/xplore/rag/: __init__.py  qa.py  schemas.py
notebooks/: oss_rag_langchain.ipynb  oss_rag_llamaindex.ipynb
